--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Кексобукинг</title>
 </head>
 <body>
-  <script type="module" src="/js/main.js"></script>
+
   <main>
     <div class="promo">
       <h1 class="promo__title visually-hidden">Keksobooking. Кексы по соседству</h1>
@@ -87,7 +87,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="title">Заголовок объявления</label>
-          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" minlength="30" maxlength="100" required>
+          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" minlength="30" maxlength="100" required data-pristine-required-message="Название для объявления нужно обязательно" data-pristine-minlength-message="Название не может быть короче 30 символов">
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
@@ -105,7 +105,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="от 5000" max="100000" min="0" step="100" required>
+          <input id="price" name="price" type="number" placeholder="от 5000" max="100000" min="0" step="100">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
@@ -230,6 +230,7 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
-
+  <script src="pristine/pristine.min.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 </html>
